# jobfit-agent

./: .gitignore  README.md  agent.py  app.py  main.py  pyproject.toml  tool.py
database/: users.csv
frontend/: dashboard.html  index.html  register.html
